--- a/Assets/Editor/AnimationPathReplacer_UI.uxml
+++ b/Assets/Editor/AnimationPathReplacer_UI.uxml
@@ -8,7 +8,7 @@
                 <ui:TextField picking-mode="Ignore" label="Search:" name="Search" hide-mobile-input="true" style="margin: 0; padding: 0 5px; width: 80%; min-height: 25px; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0;" />
                 <ui:DropdownField choices="{Between}" binding-path="aAasd" index="1" tabindex="1" name="SearchDropdown" style="width: 20%; min-height: 25px; margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0;" />
             </ui:GroupBox>
-            <ui:TextField picking-mode="Ignore" label="Value:" name="PrefixTextField" hide-mobile-input="true" style="width: 100%; height: auto; margin: 0; padding: 0 5px; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0;" />
+            <ui:TextField picking-mode="Ignore" label="Value:" name="PrefixTextField" hide-mobile-input="true" value="Animation" style="width: 100%; height: auto; margin: 0; padding: 0 5px; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0;" />
         </ui:GroupBox>
         <ui:GroupBox name="Content" style="margin: 0; justify-content: flex-start; flex-direction: row; padding-top: 5px; padding-right: 0; padding-bottom: 5px; padding-left: 0; margin-bottom: 0; margin-top: 0; margin-right: 0; margin-left: 0; max-width: 100%; height: auto; max-height: none; min-height: 200px;">
             <ui:GroupBox name="PanelOriginal" style="margin: 0; align-items: flex-start; height: 100%; width: 50%; max-height: 100%; min-height: 100%; max-width: 50%; min-width: 50%; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0;">
